fix spacing of footer

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-image: url("../public/images/aoyd-web-BG-Anomaly.jpg");
   background-size: contain;
   position: relative;
-  min-height: 515vh;
+  min-height: 700vh;
 }
 
 @media screen and (max-width: 1400px) {
